# gazebo-experiments

./: .gitignore  make.sh
bimanipulator/: reactions.py  world.xml
bimanipulator/experiment1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manipulator.cc  world.xml
bimanipulator/experiment1/experiment1/: CMakeCache.txt  cmake_install.cmake
bimanipulator/experiment2/: CMakeCache.txt  Makefile  cargo.cc  cmake_install.cmake  manipulator.cc  world.xml
bimanipulator/experiment3/: CMakeCache.txt  Makefile  cargo.cc  cmake_install.cmake  manipulator.cc
bimanipulator/experiment4/: CMakeCache.txt  Makefile  cmake_install.cmake  manipulator.cc  start_world.sh  world.cc
bimanipulator/experiment5/: CMakeLists.txt  cargo.cc  cargo.txt  graph.py  manip1  manip1.txt  manip2  manip2.txt  manipulator.cc  manipulator.xml  source_environment.sh  start_world.sh  world.cc
bimanipulator/experiment5/0.00001/: cargo.txt  manip1.txt  manip2.txt
bimanipulator/experiment5/0.0001/: cargo.txt  manip1.txt  manip2.txt
bimanipulator/experiment5/0.001/: cargo.txt  manip1.txt  manip2.txt
bimanipulator/experiment5/0.001f/: cargo.txt  manip1.txt  manip2.txt
bimanipulator/experiment5/0.01/: cargo.txt  manip1.txt  manip2.txt
bimanipulator/experiment5/0.01f/: cargo.txt  manip1.txt  manip2.txt
bimanipulator/model/: CMakeLists.txt  cargo.cc  cargo.txt  manip1.txt  manip2.txt  manipulator.cc  remotectr.cc  remotectr_world.cc  start_world.sh  user_message.proto  world.cc  world.xml
bimanipulator/model/controller/: CMakeLists.txt  controller  main.cpp
bimanipulator/model/protoout/: user_message.pb.cc  user_message.pb.h
bimanipulator/pycontroller/: control_loop.py  controller.py  local_math.py
bimanipulator/world/: a1  a2
bimanipulator/world/controller/: main.cpp
flycow/cow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cow.cc  world.xml
flycow/tiger/: CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake  cow.cc  world.xml
flycow/tiger2/: CMakeCache.txt  Makefile  cmake_install.cmake  cow.cc  world.xml
remotectr/: CMakeLists.txt  add-path-to-bashrc.sh  remotectr.cc  user_message.proto
remotectr/protoout/: user_message.pb.cc  user_message.pb.h
walker/: expexp.py  reguls-model.py
walker/exper0-quadrowalk/: alur.cc  mirmik.cc  mirmik.h  world_generator.py
walker/spider/: CMakeCache.txt  CMakeLists.txt  Makefile  alur.cc  cmake_install.cmake  jjj  mirmik.cc  mirmik.h  start_server.sh  start_world.sh  world.cc  world.xml  world_generator.py
worldctr/: CMakeLists.txt  world.cc
